# slinttest

./: Cargo.toml  build.rs  index.html
src/: highlight.rs  main.rs  memory-tile.slint  memory.slint  styling.slint  textedit-improved.slint
src/ui/: main.slint  styling.slint  textedit-improved.slint
