[package]
name = "slinttest"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/main.rs"
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.5"
slint = "1.1.0"

[build-dependencies]
slint-build = "1.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
getrandom = { version = "0.2.2", features = ["js"] }
